--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
                     abc
                 </div>
             </div>
+
+            <object type="application/pdf" data="./TechnicalResume.pdf" width="100%" id="pdf"></object>
+            
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut hendrerit efficitur molestie. Mauris dolor sapien, semper sit amet libero id, porttitor dapibus mi. Integer condimentum nunc sed orci placerat, eget posuere diam pretium. Praesent eget quam sit amet ligula mollis laoreet. Vestibulum ante ex, finibus in pellentesque a, molestie vitae ante. Integer sit amet porttitor lacus. Integer egestas lectus elementum metus hendrerit, vitae dignissim mi commodo. Duis ut turpis ultricies, rutrum lorem at, volutpat lectus. Morbi lobortis orci sed felis tempus convallis. Pellentesque eget dapibus erat, in elementum felis. Donec iaculis molestie diam, sed tristique ligula rutrum sed. Ut rhoncus, nisl a aliquam faucibus, turpis nibh aliquet orci, et pulvinar leo arcu at elit. Fusce vel ultrices nisl. Nulla varius massa diam, id luctus urna faucibus quis.
             Donec fringilla dapibus dolor vel sodales. Praesent ultricies massa odio, dignissim semper nunc suscipit quis. Vivamus dui odio, varius sed risus vitae, porttitor euismod urna. Fusce eu volutpat nulla. Praesent ac dui ex. In iaculis quam justo, ac ultricies ligula congue sit amet. Curabitur et arcu lorem. Maecenas eget fringilla tortor, a porta nunc. Pellentesque condimentum justo sit amet pharetra scelerisque. Morbi feugiat erat vitae diam lacinia, et fermentum arcu convallis.
                     
