--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
         </div>
         <div id="content">
             <div class="row justify-content-md-center">
-                <div class="col-md-9 col-sm-12 col-lg-6 btn-danger">
+                <p class="col-md-9 col-sm-12 col-lg-6 btn-danger">
                     abc
-                </div>
+                </p>
             </div>
 
             <object type="application/pdf" data="./TechnicalResume.pdf" width="100%" id="pdf"></object>
