--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <h2 class="text-center">FULL STACK DEVELOPER</h2>
         </div>
         <div id="content">
-            <div class="row justify-content-md-center">
+            <div>
                 <p class="col-md-9 col-sm-12 col-lg-6 btn-danger">abc</p>
             </div>
 
