More work on the page

--- a/index.html
+++ b/index.html
@@ -29,6 +29,13 @@
         #content{
             margin:10px;
             padding:10px;
+        }
+        #content .nav{
+            margin-left: 10px;
+            border: 0;
+        }
+        .page{
+            padding:10px;
             background:white;
             border-radius:10px;
         }
@@ -58,13 +65,32 @@
             <h2 class="text-center">FULL STACK DEVELOPER</h2>
         </div>
         <div id="content">
+        <ul class="nav nav-tabs">
+            <li class="nav-item">
+                <a class="nav-link active" href="#">Bio</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Projects</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Skills</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Hobbies</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Resume</a>
+            </li>
+        </ul>
+        <div class="page">
             <img style="width:50%; max-width:400px; display: inline-block; vertical-align: top;" src="me.jpg">
             <div style="display:inline-block;">
-            <p>asdfa</p>
-            <p>asdfa</p>
-            <p>asdfa</p>
-            <p>asdfa</p>
+                <p>asdfa</p>
+                <p>asdfa</p>
+                <p>asdfa</p>
+                <p>asdfa</p>
             </div>
+        </div>
         </div>
         <footer id="footer" class="text-center">
             <a href="https://www.linkedin.com/in/kevin-stratmeyer-5770468b/"><img class="footerImg" src="img/linkedin.png">Linkedin</a>
