--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
             background:white;
             border-radius:10px;
         }
+        .nav-link{
+            padding:5px;
+        }
         #footer{
             padding-top:20px;
             color: rgb(71, 71, 71);
