--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             </li>
         </ul>
         <div class="page">
-            <img class="col-4" style="padding:0; display: inline-block; vertical-align: top;" src="me.jpg"><div class="col-1" style="padding:0; display: inline-block;"></div><div class="col-7" style="padding:0; display: inline-block; vertical-align: top;">
+            <img class="col-sm-4 col-xs-12" style="padding:0; display: inline-block; vertical-align: top;" src="me.jpg"><div class="col-sm-1 col-xs-0" style="padding:0; display: inline-block;"></div><div class="col-sm-7 col-xs-12" style="padding:0; display: inline-block; vertical-align: top;">
                 <p>I'm Kevin Stratmeyer. I'm a full stack developer / software engineer looking for an amazing new oportunity. I just finished a 14 week program (Coding Dojo) working over 1000 hours, in which I learned Python (Django and Flask), Java (Spring Boot) and MEAN. A few years ago I had to drop out of Boston University, where I was studying computer science, due to family issues. When I started to have time I looked to get back to the tech world. Realizing that I didn't want to wait 2 more years in accademics, I joined Coding Dojo to jumpstart my career in the tech world. I'm passionate about video games, especially games with online multiplayer capabilities. My goal is to build great multiplayer online games that also fight against the preditory practices most "Free to play" games use.</p>
             </div>
         </div>
