--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
             $(this).addClass('active');
             $(".page").children().addClass('d-none');
             $("#"+$(this).attr('myData')).removeClass('d-none');
+            return false;
         });
     </script>
 </body>
